[package]
name = "blp-conv"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI tool to encode/decode Blizzard BLP texture format"
repository = "https://github.com/zloy-tulen/image-blp.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.19", features = ["derive"] }
image-blp = { path = "../image-blp" }
env_logger = "0.9.0"
log = "0.4.17"
thiserror = "1.0.34"
image = "0.24.3"
