[package]
name = "image-blp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
nom = "7.1.1"
thiserror = "1.0.33"

[dev-dependencies]
env_logger = "0.9.0"
tempfile = "3.3.0"
test-log = "0.2.8"
